@@ -1,5 +1,5 @@
 .\"Document Author:  Timothy R. Butler   -   tbutler@uninetsolutions.com"
-.TH bochsrc 5 "18 Aug 2017" "bochsrc" "The Bochs Project"
+.TH bochsrc 5 "29 Dec 2017" "bochsrc" "The Bochs Project"
 .\"SKIP_SECTION"
 .SH NAME
 bochsrc \- Configuration file for Bochs.
@@ -458,7 +458,8 @@ extension:
 
 Here you can specify the display extension to be used. With the value
 \&'none' you can use standard VGA with no extension. Other supported
-values are 'vbe' for Bochs VBE and 'cirrus' for Cirrus SVGA support.
+values are 'vbe' for Bochs VBE, 'cirrus' for Cirrus SVGA support and
+\&'voodoo' for Voodoo Graphics support (see 'voodoo' option).
 
 update_freq:
 
@@ -482,9 +483,11 @@ Examples:
 .TP
 .I "voodoo:"
 This defines the Voodoo Graphics emulation (experimental). Currently
-supported models are 'voodoo1' and 'voodoo2'. The Voodoo2 support is not
-yet complete, but almost usable. The gui screen update timing is controlled
-by the related 'vga' options.
+supported models are 'voodoo1', 'voodoo2' and 'banshee'. The Voodoo2 support
+is not yet complete, but almost usable. The Banshee support is under
+construction, but basicly usable. It requires an external VGA BIOS and the
+vga extension option to be set to 'voodoo'. The gui screen update timing
+for all models is controlled by the related 'vga' options.
 
 Example:
   voodoo: enabled=1, model=voodoo1
